# DevBox

./: .gitignore  LICENSE  README.md  REFACTORING_COMPLETE.md  REFACTOR_CORRECTION_PLAN.md  REFORM_PLAN.md  ROADMAP.md  UNSLOTH_IMPLEMENTATION_PLAN.md  ascii_art.py  backup_utils.py  config.py  devbox.py  exa_helper.py  exa_proxy.py  gpu_utils.py  images.py  launchers.py  main.py  persistence_utils.py  pyproject.toml  pytest.ini  quotes.json  quotes.py  quotes_loader.py  qwen-3.6-12gb-vram-config.md  shared_runtime.py  system_info.py  test_windows.py  ui_utils.py  utils.py  windows_launcher.py  windows_sandbox.py
.sisyphus/drafts/: python-refactoring-plan.md
